--- a/resources/assets/stylesheets/less/responsive.less
+++ b/resources/assets/stylesheets/less/responsive.less
@@ -174,21 +174,21 @@
 .responsive-display {
     // Hide sidebar from view until .responsified
     &:not(.responsified) {
-        #layout-sidebar {
+        #sidebar {
             display: none;
         }
     }
 
     .media-breakpoint-small-down({
-        #header, #flex-header, #barTopFont, #barTopMenu,
+        #header, #navigation-level-1, #site-title, #barTopMenu,
         #barBottomLeft .current_page, #barBottommiddle, #barBottomLeft, #barBottomArrow,
-        #tabs, .sidebar-image, #sidebar-navigation:not(.show), #barTopFont, #footer, .sidebar-widget-header,
+        #tabs, .sidebar-image, #sidebar-navigation:not(.show), #barTopFont, #main-footer-info, .sidebar-widget-header,
         .tabs_wrapper .colorblock {
             display: none !important;
         }
 
-        #layout_wrapper #layout_page {
-            .secondary-navigation {
+        #current-page-structure {
+            #navigation-level-2 {
                 display: flex;
                 flex-direction: row;
                 flex-wrap: nowrap;
@@ -197,20 +197,20 @@
                 border-bottom: 1px solid @dark-gray-color-40;
 
                 .colorblock,
-                #layout_context_title,
+                #context-title,
                 .context_icon,
                 .tabs_wrapper {
                     transition: unset;
                 }
 
-                #layout_context_title,
+                #context-title,
                 .tabs_wrapper {
                     background: transparent;
                     border-width: 0;
                     flex: 1;
                 }
 
-                #layout_context_title {
+                #context-title {
                     flex: 1;
 
                     overflow: hidden;
@@ -223,12 +223,13 @@
                     }
                 }
             }
-        }
-        #layout_wrapper #layout_page .tabs_wrapper {
-            justify-content: flex-end;
-            .helpbar-container {
-                top: 0px;
-                right: 6px;
+
+            .tabs_wrapper {
+                justify-content: flex-end;
+                .helpbar-container {
+                    top: 0px;
+                    right: 6px;
+                }
             }
         }
         .responsive-hidden {
@@ -246,13 +247,13 @@
             line-height: 20px;
         }
 
-        #barTopAvatar {
+        #avatar-menu-container {
             position: relative;
             bottom: 0px;
             right: 0px;
             line-height: 20px !important;
 
-            #header_avatar_menu {
+            #avatar-menu {
                 display: none;
             }
 
@@ -261,7 +262,7 @@
             }
         }
 
-        #barBottomContainer {
+        #top-bar {
             box-sizing: border-box;
             height: @header-bar-container-height;
             position: fixed;
@@ -271,7 +272,7 @@
             width: 100%;
         }
 
-        #barBottomright, #barBottomright ul {
+        #header-links, #header-links ul {
             box-sizing: border-box;
             flex: 1;
         }
@@ -321,18 +322,13 @@
             display: block;
         }
 
-        #layout_page {
+        #current-page-structure {
             margin-left: 0;
             margin-right: 0;
         }
 
-        #layout_page, #layout_container, #barBottomContainer, #flex-header, #layout_content {
+        #current-page-structure, #top-bar, #navigation-level-1, #layout_content {
             min-width: inherit !important;
-        }
-
-        #layout_container {
-            margin-left: 0px;
-            margin-right: 0px;
         }
 
         #layout_content {
@@ -343,11 +339,11 @@
             right: 0 !important;
             transition: right 300ms;
         }
-        #layout-sidebar.visible-sidebar #sidebar-shadow-toggle {
+        #sidebar.visible-sidebar #sidebar-shadow-toggle {
             display: initial;
         }
 
-        #layout-sidebar {
+        #sidebar {
             #gradient > .horizontal(@brand-color-light, @brand-color-darker);
             background-clip: content-box;
             transition: right 300ms;
@@ -368,19 +364,14 @@
 
             border-left: @responsive-menu-shadow-width solid @responsive-menu-shadow-color;
 
-            .sidebar {
-                box-sizing: border-box;
+            box-sizing: border-box;
 
-                &:before {
-                    border: 0 !important;
-                }
-
-                top: auto !important;
-                width: @responsive-menu-width !important;
-
-                background: inherit;
-                border: 0;
+            &:before {
+                border: 0 !important;
             }
+
+            background: inherit;
+            border: 0;
 
             .widget-links li.active {
                 &:before, &:after {
@@ -423,7 +414,7 @@
             }
         }
 
-        #layout_footer {
+        #main-footer {
             display: block;
             min-width: 0;
             width: 100vw;
