--- a/resources/assets/stylesheets/print.less
+++ b/resources/assets/stylesheets/print.less
@@ -32,18 +32,18 @@ body, input, textarea, td, th, blockquote, p, form, ul, h4 {
 #layout_wrapper {
     display: block;
 }
-#layout_content {
+#content {
     margin-right: 0;
 }
 
-#header *, #barTopMenu, #barTopTools, #barTopStudip, #barBottomLeft,
-#barBottommiddle, #barBottomright, #barBottomshadow, #tabs, #tabs2,
+#header *, #navigation-level-1-items, #barTopTools, #top-logo, #responsive-menu,
+#barBottommiddle, #header-links, #barBottomshadow, #tabs, #tabs2,
 #layout_infobox, td.infoboxrahmen, td.infobox, td.infobox-img,
-#schedule_icons, #edit_inst_entry, #layout_sidebar, #barBottomContainer,
+#schedule_icons, #edit_inst_entry, #sidebar, #top-bar,
 .messagebox_buttons a.close, a.button, button.button,
-#layout-sidebar, .helpbar-container, .helpbar,
+#sidebar, .helpbar-container, .helpbar,
 #skip_link_navigation, .skip_target, nav.action-menu,
-#barTopFont {
+#site-title {
     display: none !important;
 }
 
@@ -108,7 +108,7 @@ td.rahmen_table_row_odd {
 }
 
 /* --- stud.ip-title oben  -------------------------------------------------- */
-#barTopFont {
+#site-title {
     font-weight: normal;
     display: block !important;
     font-size: 18pt;
@@ -119,11 +119,11 @@ td.rahmen_table_row_odd {
 }
 
 /* --- studip-logo im footer ------------------------------------------------ */
-#layout_footer * {
+#main-footer * {
     display: none;
 }
 
-#layout_footer {
+#main-footer {
     width: 100%;
     text-align: center;
     padding: 2pt 0 0 0;
