--- a/resources/assets/stylesheets/scss/layouts.scss
+++ b/resources/assets/stylesheets/scss/layouts.scss
@@ -1,56 +1,77 @@
-// TODO: LESSify
+// TODO: SCSSify
 
 $page-margin: 15px;
-
-$sidebar-width: 250px;
-$sidebar-padding: 12px;
-$sidebar-border-width: 1px;
 
 $content-width: 400px;
 $content-margin: 12px;
 
+$sidebar-padding: 12px;
+$sidebar-width: 270px;
+
+$footer-height: 32px;
+
 $site-width: ($page-margin * 2 + $sidebar-width + $sidebar-padding * 2 + $sidebar-border-width * 2 + $content-width + $content-margin * 2);
 $page-width: ($sidebar-width + $sidebar-padding * 2 + $sidebar-border-width * 2 + $content-width + $content-margin * 2);
 
+$grid-gap: 0;
 
-/* --- Layouts -------------------------------------------------------------- */
-#layout_page {
+body {
+    background-color: $white;
+    display: grid;
+    grid-column-gap: 5px;
+    grid-row-gap: $grid-gap;
+    grid-template-columns: ($sidebar-width + $sidebar-padding) 1fr;
+    grid-template-rows: auto 1fr $footer-height;
+}
+
+#main-header {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+}
+
+#top-bar {
+    height: 40px;
+    min-width: $site-width;
+    z-index: 1001; // High enough so it will be above the sidebar
+}
+
+#navigation-level-1 {
+    align-content: stretch;
+    align-items: stretch;
+    background-color: $white;
     border-radius: 0 0 2px 2px;
     box-sizing: border-box;
-    clear: both;
-    margin: 0;
-    background-color: $white;
-}
-
-// for old pages without template layout
-#layout_table {
-    background-color: $light-gray-color-60;
-    border: 20px solid $white;
-    margin: 0;
-    padding: 0;
+    display: flex;
+    justify-content: flex-start;
+    min-width: $site-width;
     width: 100%;
 
-    td { vertical-align: top; }
+    > ul {
+        flex: 0 0 auto;
+        height: 55px;
+    }
+
+    #top-logo {
+        flex: 0 1 auto;
+        margin-right: 12px;
+        margin-top: -13px;
+    }
 }
 
-#layout_container {
-    background-color: $white;
+/* --- Layouts -------------------------------------------------------------- */
+#current-page-structure {
+    background-color: #fff;
     border-radius: 0 0 2px 2px;
-    /*margin: 0;*/
-    padding-top: 15px;
+    width: 100%;
+
+    &.oversized {
+        overflow: visible;
+    }
 }
 
-#page_title_container {
-    float: left;
-    background-color: $white;
-    line-height: 20px;
-    margin-left: 15px;
-    margin-right: 15px;
-    min-height: 45px;
-}
-
-.secondary-navigation {
+#navigation-level-2 {
     position: relative;
+
     .colorblock {
         position: absolute;
         top: 0;
@@ -59,7 +80,7 @@ $page-width: ($sidebar-width + $sidebar-padding * 2 + $sidebar-border-width * 2 
         width: $page-margin;
     }
 
-    #layout_context_title {
+    #context-title {
         font-size: 1.1em;
         height: 30px;
         padding-left: $page-margin;
@@ -75,6 +96,14 @@ $page-width: ($sidebar-width + $sidebar-padding * 2 + $sidebar-border-width * 2 
     }
 
     .tabs_wrapper {
+        align-items: stretch;
+        background-color: $dark-gray-color-10;
+        border-bottom: 1px solid $dark-gray-color-40;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        font-size: 0.9em;
+        justify-content: space-between;
         padding-left: 27px;
     }
 
@@ -83,7 +112,7 @@ $page-width: ($sidebar-width + $sidebar-padding * 2 + $sidebar-border-width * 2 
             width: 0;
         }
 
-        #layout_context_title {
+        #context-title {
             color: rgba(0, 0, 0, 0);
             height: 0;
             max-height: 35px;
@@ -99,94 +128,122 @@ $page-width: ($sidebar-width + $sidebar-padding * 2 + $sidebar-border-width * 2 
         }
     }
 }
-#current_page_title {
-    font-weight: bold;
-    font-size: 1.4em;
-    position: relative;
-    top: 20px;
+
+#tabs {
+    width: 100%;
+    flex: 1;
+    padding-left: $page-margin;
+    transition: margin-left;
+    transition-duration: 300ms;
+    transition-delay: 500ms;
 }
 
-#layout_page.oversized {
-    overflow: visible;
+#sidebar {
+    border-left: 1px dashed $brand-color-darker;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
 }
 
-
-#layout_content {
-    box-sizing: border-box;
-    @include scrollbox-horizontal();
+#content-wrapper {
+    background-color: $white;
+    display: inline-flex;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    justify-content: flex-start;
+    margin: 15px 15px 15px 2px;
     padding: 0 $content-margin 47px $content-margin;
+    position: relative;
     vertical-align: top;
-    min-width: $content-width;
 
     .oversized & {
         overflow: visible;
     }
 }
 
-#layout_sidebar {
-    background: inherit;
-    border-left: 1px dashed $brand-color-darker;
-    max-width: $sidebar-width;
-    width: $sidebar-width;
-    min-width: $sidebar-width;
-    padding: $sidebar-padding;
+#content {
+    flex: 1;
 }
 
-#layout_wrapper {
-    @include clearfix();
-    clear: both;
-    min-width: 800px; // 800px breite ist minimum
-    min-height: 100%;
+// for old pages without template layout
+#layout_table {
+    background-color: $light-gray-color-60;
+    border: 20px solid #fff;
+    margin: 0;
+    padding: 0;
     width: 100%;
-    height: auto !important;
-    margin: 0 auto;
+
+    td { vertical-align: top; }
 }
 
-#layout_footer {
+#page-title-container {
+    float: left;
+    background-color: #fff;
+    line-height: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
+    min-height: 45px;
+}
+
+#context-title {
+    font-size: 1.1em;
+    height: 30px;
+    padding-left: $page-margin;
+    max-height: 30px;
+    overflow: hidden;
+
+    background: linear-gradient(to bottom, $dark-gray-color-5, $dark-gray-color-10);
+
+    > .context_icon {
+        margin: 7px 1px 0 9px;
+        vertical-align: text-bottom;
+    }
+}
+
+#page-title {
+    font-weight: bold;
+    font-size: 1.4em;
+    position: relative;
+    top: 20px;
+}
+
+#main-footer {
     background-color: $base-color;
-    color: $contrast-content-white;
+    color: $white;
     display: flex;
     padding: 2px 0;
-    min-width: $site-width;
-    width: 100%;
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
 }
-#footer {
-    flex-grow: 1;
+
+#main-footer-info {
     margin-left: 8px;
     margin-top: 2px;
     line-height: 28px;
 }
 
-#layout_wrapper {                // the main flex, dividing all elements into flexing rows
+#navigation-level-1 {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: nowrap;
     align-content: stretch;
     align-items: stretch;
-    justify-content: flex-start;
+    justify-content: space-between;
 
+    width: 100%;
     min-width: $site-width;
 
-    #flex-header {              // first row of flex-main
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-content: stretch;
-        align-items: stretch;
-        justify-content: space-between;
+    border-bottom: 1px solid $light-gray-color-40;
+}
 
-        width: 100%;
-        min-width: $site-width;
+#top-bar {       // second row of flex-main
+    flex: 0 1 auto;
+    z-index: 1001; // High enough so it will be above the sidebar
+}
 
-        border-bottom: 1px solid $light-gray-color-40;
-    }
+body {
+    width: 100%;
 
-    #barBottomContainer {       // second row of flex-main
-        min-width: $site-width;
-        z-index: 1001; // High enough so it will be above the sidebar
-    }
-
-    #layout_page { // third row of flex-main
+    #current-page-structure { // third row of flex-main
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
@@ -215,20 +272,15 @@ $page-width: ($sidebar-width + $sidebar-padding * 2 + $sidebar-border-width * 2 
             transition-delay: 500ms;
         }
 
-        #layout_container {          // row 3 of layout_page
-            display: flex;
-            flex-direction: row;
-            flex-wrap: nowrap;
-            align-content: stretch;
-            align-items: stretch;
-            justify-content: flex-start;
+        > ul { // column 1 of flex-header
+            flex: 1 1 auto;
+        }
 
-            flex-grow: 1;
-            min-width: $page-width;
+        #top-logo {
+            flex: 0 1 auto;
+            margin-right: 12px;
+            margin-top: -13px;
 
-            #layout_content {           // column 1 of layout_container
-                flex-grow: 1;
-            }
         }
     }
 }
