--- a/resources/assets/stylesheets/scss/variables.scss
+++ b/resources/assets/stylesheets/scss/variables.scss
@@ -28,12 +28,14 @@ $headings-color:          #000;
 
 // Design specific
 $bar-bottom-container-height: 40px;
-$header-height: 70px;
+$header-height: 80px;
 
 //Avatar sizes:
 $avatar-small:  25px;
 $avatar-medium: 100px;
 $avatar-normal: 250px;
+
+$sidebar-border-width: 1px;
 
 $drag_and_drop_z_index: 1000;
 $drag_and_drop_border: 1px solid $base-color;
