--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -478,9 +478,9 @@ a.new-member {
     brightness(100% - hsvvalue(@base-color) + hsvvalue(#28497c));
 }
 
-#barTopMenu li a img,
-#barTopMenu li a canvas,
-#layout-sidebar .sidebar-image > img {
+#navigation-level-1-items li a img,
+#navigation-level-1-items li a canvas,
+#sidebar .sidebar-image > img {
     .recolor;
 }
 
