--- a/resources/assets/stylesheets/scss/contentbar.scss
+++ b/resources/assets/stylesheets/scss/contentbar.scss
@@ -92,19 +92,18 @@
 }
 
 body.consuming_mode {
-    #barBottomContainer, #flex-header, .secondary-navigation, #barTopStudip, #page_title_container {
-        max-height: 0px;
-        opacity: 0;
-        overflow: hidden;
+    #main-header, #main-footer {
+        display: none;
     }
 
-    #layout_wrapper {
-        padding-top: 0px;
-    }
-
-    #layout-sidebar {
+    #sidebar {
         margin-left: -280px;
         opacity: 0;
+    }
+
+    #content {
+        grid-column: 1/3;
+        grid-row: 1/3;
     }
 
     .contentbar {
