--- a/resources/assets/stylesheets/scss/fullscreen.scss
+++ b/resources/assets/stylesheets/scss/fullscreen.scss
@@ -11,38 +11,56 @@ $transition-duration: 300ms;
     cursor: pointer;
     float: right;
     height: 28px;
+
+    @include background-icon(zoom-in2, clickable, 20);
+    background-position: center;
+    background-repeat: no-repeat;
+
+    text-indent: 200%;
+    overflow: hidden;
+
+    clear: both;
+    float: right;
+
+    position: relative;
+    top: 1px;
+    right: 12px;
+
+    cursor: pointer;
+
+    z-index: 100;
 }
 
 html:not(.is-fullscreen-immediately) {
-    #barBottomContainer,
-    #flex-header,
-    .secondary-navigation {
+    #top-bar,
+    #navigation-level-1,
+    #navigation-level-2 {
         transition: top $transition-duration, margin-bottom $transition-duration, opacity $transition-duration;
     }
-    #layout-sidebar {
+    #sidebar {
         transition: left $transition-duration, margin-right $transition-duration, opacity $transition-duration;
     }
-    #layout_footer {
+    #main-footer {
         transition: opacity $transition-duration, max-height $transition-duration, padding $transition-duration;
     }
 }
 
 html.is-fullscreen {
-    #barBottomContainer,
-    #flex-header,
-    .secondary-navigation {
+    #top-bar,
+    #navigation-level-1,
+    #navigation-level-2 {
         margin-bottom: -70px;
         opacity: 0;
         top: -142px;
     }
 
-    #layout-sidebar {
+    #sidebar {
         left: -300px;
         margin-right: -270px;
         opacity: 0;
     }
 
-    #layout_footer {
+    #main-footer {
         opacity: 0;
         max-height: 0px;
         padding: 0px;
