--- a/resources/assets/stylesheets/scss/index.scss
+++ b/resources/assets/stylesheets/scss/index.scss
@@ -1,115 +1,60 @@
-div.index_container {
-    margin: 0 0;
-    top: 111px;
+#main-header {
+    grid-column: 1 / 3;
+    grid-row: 1 / 1;
+}
+
+#content {
+    grid-column: 1 / 3;
+    grid-row: 2 / 2;
+}
+
+#background-desktop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     bottom: 0;
-    width: 100%;
-    height: calc(100% - 110px);
+    z-index: -1;
+}
 
-    ul#tabs {
-        display: none;
-    }
+#background-mobile {
+    display: none;
+    z-index: -1;
+}
 
-    #background-desktop {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: -1;
-    }
+#loginbox {
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+    margin-left: 50px;
+    margin-top: 50px;
+    padding: 20px;
+    width: 450px;
 
-    #background-mobile {
-        display: none;
-        z-index: -1;
-    }
+    header {
+        margin: 10px 0 0 10px;
 
-    div.messagebox {
-        margin-left: 50px;
-        margin-top: 50px;
-        width: 428px;
-    }
-
-    div.index_main {
-        background-color: rgba(255, 255, 255, 0.8);
-        box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
-        margin-left: 50px;
-        margin-top: 50px;
-        width: 500px;
-
-        & > div {
-            padding: 20px;
+        h1 {
+            border-bottom: 0;
         }
+    }
 
-        form {
-            padding: 20px;
-        }
-
-        footer {
-            overflow: auto;
-            padding: 20px;
-
-            div#languages {
-                border-top: 1px solid $light-gray-color;
-                font-size: 0.9em;
-                padding: 10px;
-
-                a {
-                    padding-right: 10px;
-                }
-            }
-
-            div#contrast {
-                display: flex;
-                align-items: center;
-                gap: 5px;
-                border-top: 1px solid $light-gray-color;
-                font-size: 0.9em;
-                padding: 10px;
-
-                a {
-                    text-decoration: underline;
-                    color: $base-color;
-
-                    &:hover, &:focus {
-                        font-size: 1em;
-                        color: $red;
-                    }
-                }
-            }
-
-            div.login_info {
-                border-top: 1px solid $light-gray-color;
-                font-size: 0.8em;
-                div {
-                    text-align: right;
-                    float: left;
-                    padding: 5px;
-
-                    &:last-child {
-                        float:right;
-                    }
-                }
-            }
-            & > a {
-                margin-left: 12px;
-            }
-        }
-        nav {
-            h1 {
-                border-bottom: 0;
-            }
-            padding: 10px;
-            margin-left: 20px;
-            margin-top: 20px;
+    nav {
+        ul {
             display: inline-block;
+            list-style-type: none;
+            margin: 0;
             width: 450px;
-            div.login_link {
+            padding: 0 10px;
+
+            .login_link {
                 display: inline-block;
                 width: 180px;
                 vertical-align: top;
                 padding-right: 25px;
+
                 a {
                     font-size: 1.5em;
+
                     p {
                         font-size: 0.5em;
                         color: $black;
@@ -117,13 +62,63 @@ div.index_container {
                 }
             }
         }
+    }
 
+    footer {
+        overflow: auto;
+
+        #languages {
+            border-top: 1px solid $light-gray-color;
+            font-size: 0.9em;
+            padding: 10px;
+
+            a {
+                padding-right: 10px;
+            }
+        }
+
+        #contrast {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            border-top: 1px solid $light-gray-color;
+            font-size: 0.9em;
+            padding: 10px;
+
+            a {
+                text-decoration: underline;
+                color: $base-color;
+
+                &:hover, &:focus {
+                    font-size: 1em;
+                    color: $red;
+                }
+            }
+        }
+
+        div.login_info {
+            border-top: 1px solid $light-gray-color;
+            font-size: 0.8em;
+            div {
+                text-align: right;
+                float: left;
+                padding: 5px;
+
+                &:last-child {
+                    float:right;
+                }
+            }
+        }
+        & > a {
+            margin-left: 12px;
+        }
     }
 }
 
 #index,
 #login {
     .messagebox {
-        margin-bottom: -25px;
+        margin: 50px 0 -25px 50px;
+        width: 418px;
     }
 }
