--- a/resources/assets/stylesheets/scss/oauth2.scss
+++ b/resources/assets/stylesheets/scss/oauth2.scss
@@ -11,7 +11,7 @@ article.admin-oauth2--setup {
 
     font-size: 16px;
 
-    #layout-sidebar, #layout_footer {
+    #sidebar, #main-footer {
         display: none;
     }
 
