fix wrong usage of mix(), fixes #1868
Closes #1868

Merge request studip/studip!1222

--- a/resources/assets/stylesheets/scss/dialog.scss
+++ b/resources/assets/stylesheets/scss/dialog.scss
@@ -1,5 +1,5 @@
 .ui-widget-overlay {
-    background: transparentize($base-gray, .2);
+    background: fade-out($base-gray, 0.2);
     opacity: 1;
     position: fixed;
 }
