--- a/resources/assets/stylesheets/scss/big-image-handler.scss
+++ b/resources/assets/stylesheets/scss/big-image-handler.scss
@@ -1,4 +1,4 @@
-$bg-big-image-handler: mix($black, $white, 30%);
+$bg-big-image-handler: fade-out($black, 0.3);
 
 .oversized-image {
     cursor: zoom-in;
@@ -31,7 +31,7 @@ $bg-big-image-handler: mix($black, $white, 30%);
         background-repeat: no-repeat;
         background-size: contain;
         border: 1px solid $white;
-        box-shadow: 0 0 20px mix($black, $white, 50%);
+        box-shadow: 0 0 20px fade-out($white, 0.5);
         display: block;
         max-width: 98%;
         max-height: 98%;
