resurrect qrcode display, fixes #1861
Closes #1861

Merge request studip/studip!1220

--- a/resources/assets/stylesheets/scss/tfa.scss
+++ b/resources/assets/stylesheets/scss/tfa.scss
@@ -1,11 +1,18 @@
 .tfa-app-code {
     code.qr {
-        display: none;
-    }
-    .qrcode img {
+        display: block;
         margin: auto;
-        width: 40%;
         max-width: 50vw;
+        width: 40%;
+
+        canvas {
+            max-width: 100%;
+            height: auto;
+        }
+
+        &:not(.has-qr-code) {
+            display: none;
+        }
     }
 }
 
